cmake_minimum_required(VERSION 2.8.11)

IF(PACKAGE_NAME)
	PROJECT(${PACKAGE_NAME})
ELSE()
	PROJECT(HHProject)
ENDIF()


IF(CMAKE_BUILD_TYPE)
ELSE()	
	SET(CMAKE_BUILD_TYPE Debug)
ENDIF()
MESSAGE("CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")

SET(EXECUTABLE_OUTPUT_PATH ${${PROJECT_NAME}_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${${PROJECT_NAME}_SOURCE_DIR}/lib)
LINK_DIRECTORIES(${${PROJECT_NAME}_SOURCE_DIR}/3rdparty)

IF(CMAKE_BUILD_TYPE MATCHES "Release")
LINK_DIRECTORIES(${${PROJECT_NAME}_SOURCE_DIR}/lib/Release)
ELSE()
LINK_DIRECTORIES(${${PROJECT_NAME}_SOURCE_DIR}/lib/Debug)
ENDIF()

ADD_DEFINITIONS(-D_WIN32_WINNT=0x0600)

INCLUDE_DIRECTORIES(${${PROJECT_NAME}_SOURCE_DIR}/include)

ADD_SUBDIRECTORY(src)